...
class AuthenticationViewController: UIViewController {
    fileprivate var viewModel: AuthenticationViewModel!
    private let disposeBag = DisposeBag()
    
    weak var coordinator: AuthenticationFlowCoordinator!
    
    private let chooseLoginView: ChooseLoginView = {
        let view = ChooseLoginView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.accessibilityIdentifier = "chooseLoginView"
        return view
    }()
    
    private let signInView: SignInView = {
        let view = SignInView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.accessibilityIdentifier = "signInView"
        view.isHidden = true
        return view
    }()
...
